--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   
+  <head>
+    <link rel="stylesheet" href="files/styleSheet.css">
+    <link rel="icon" type="image/x-icon" href="files/images/favicon.ico">
+    <title>About Me | Reuven Reyman</title>
+  </head>
   
   
 <body>
