--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
     <title>About Me | Reuven Reyman</title>
   </head>
   
+  <style>
+    body{
+      background-image: url("https://images.unsplash.com/photo-1557683316-973673baf926?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Z3JhZGllbnQlMjBiYWNrZ3JvdW5kfGVufDB8fDB8fHww&w=1000&q=80");
+      background-repeat: no-repeat;
+      background-size: auto;
+    }
+  </style>
   
 <body>
+  
+<div class='container' style='background-color:white; min-height:30%;'>
+  <h1>My First Heading</h1>
+  <p>My first paragraph.</p>
+</div>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
 
 </body>
 </html>
