--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <link rel="stylesheet" href="files/styleSheet.css">
     <link rel="icon" type="image/x-icon" href="files/images/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me | Reuven Reyman</title>
   </head>
   
