--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
   
 <div class='container' style='background-color:white; min-height:30%;'>
-  <h1>My First Heading</h1>
-  <p>My first paragraph.</p>
+  <h1>Reuven Reyman</h1>
+  <p>Welcome to my portfolio. Thank you for taking some time to learn about me.</p>
 </div>
 
 
