--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       background-image: url("https://images.unsplash.com/photo-1557683316-973673baf926?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Z3JhZGllbnQlMjBiYWNrZ3JvdW5kfGVufDB8fDB8fHww&w=1000&q=80");
       background-repeat: no-repeat;
       background-size: cover;
+      background-attachment: fixed;
     }
   </style>
   
