--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
   </style>
   
 <body>
-  
-<div class='container' style='background-color:white; min-height:30%;'>
-  <h1>Reuven Reyman</h1>
-  <p>Welcome to my portfolio. Thank you for taking some time to learn about me.</p>
-</div>
 
+  <div class='fullContainer' style='background-color:white; min-height:40%;'> 
+    <div class='container' >
+      <h1>Reuven Reyman</h1>
+      <p>Welcome to my portfolio. Thank you for taking some time to learn about me.</p>
+    </div>
+  </div>
 
 </body>
 </html>
