--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
 <body>
 
-  <div class='fullContainer' style='background-color:white; min-height:40%;'> 
+  <div class='fullContainer' style='background-color:white; min-height:40%; margin-top:20px;'> 
     <div class='container' >
       <h1>Reuven Reyman</h1>
       <p>Welcome to my portfolio. Thank you for taking some time to learn about me.</p>
