--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
     a{cursor:pointer; text-decoration:underline; color:white; transition:0.3s;}
     a:hover{color:gray;}
+
+    #navBar a {display:inline-block; margin:15px; font-size:20px; font-weight:bold; line-height:30px;}
   </style>
   
 <body>
@@ -34,6 +36,7 @@
     <div class='container' style='color:black;'>
       <h1>Reuven Reyman</h1>
       <p>Welcome to my portfolio. Thank you for taking some time to learn about me.</p>
+      <p style='width:full; text-align:center;' class='navBar'><a>Work Experience</a> | <a>Projects</a> | <a>Skills</a> | <a>Education</a>
     </div>
   </div>
 
