--- a/index.html
+++ b/index.html
@@ -33,8 +33,18 @@
     <br><br>
 
   <div class='fullContainer' style='background-color:white;'>
-          <p style='width:full; text-align:center; color:black;' class='navBar'><a href='experience'>Work Experience</a> | <a href='projects'>Projects</a> | <a href='skills'>Skills</a> | <a href='education'>Education</a>
-          </p>
+          <p style='width:full; text-align:center; color:black;' class='navBar'><a href='experience'>Work Experience</a> | <a href='projects'>Projects</a> | <a href='skills'>Skills</a> | <a href='education'>Education</a></p>
+  </div>
+
+  <div class='container' style=''>
+    <h1>Where I'm at and Where I'm Going</h1>
+  </div>
+
+  <div class='columnContainer'>
+    <img src=''>
+    <div>
+              <p>I have always been invested in the field of engineering and I wish to pursue a career designing amusement park rides.</p>
+    </div>
   </div>
   
 </body>
