--- a/index.html
+++ b/index.html
@@ -36,16 +36,25 @@
           <p style='width:full; text-align:center; color:black;' class='navBar'><a href='experience'>Work Experience</a> | <a href='projects'>Projects</a> | <a href='skills'>Skills</a> | <a href='education'>Education</a></p>
   </div>
 
-  <div class='container' style=''>
-    <h2>Where I'm at and Where I'm Going</h2>
+  <div class='container' style='max-width:1000px;'>
+    <h3>Always Moving Forward</h3>
+    <p>From a young age, I have always been a creator. From building my own machines and contraptions to taking apart my parent's devices and electronics, the world of engineering has and continues to facinate me. Everywhere I go, I find creative and inventive ways to fix, improve, and optimize the world around us. I find it's this mindset which makes me a great candidate for any position where innovative thought and problem solving initiative is required.</p>
+    <p>Since the beggining, I have solved problems wherever they arose. When I couldn't find a satisfactory (and free) service to host my hobby website, I taught myself HTML and JavaScript and made my very own website from scratch on Github Pages. When my uncle needed a more efficient way to showcase his construction projects, I learned Blender and Unity3D to create a virtual tour of his homes. Throughout my life, I have applied the skills and knowlege I have gained both in and out of school to the real world to solve real problems. It is this experience which has only grown and enhanced my passion for engineering and my role in a forward-moving world.</p>
   </div>
 
-  <div class='columnContainer'>
-    <img src=''>
+  <div class='columnContainer' style=''>
+    <img src='/files/images/podemos1.jpg'>
     <div>
-              <p>I have always been invested in the field of engineering and I wish to pursue a career designing amusement park rides.</p>
+      <h3>Leading By Example</h3>
+      Raised by two current Project Managers, I have been raised in a family of leaders and innovative thinkers who, in the words of my dad, "get sh*t done". Like my parents, I have an inner drive to not only complete the task on hand, but to do so in my best and most profitable manner. In school and the workplace, I have learned a geat deal about time management, team leadership, and working in a fast-paced cooperative environment. 
+      <p>In many of the <a href='projects'>projects I have worked on</a>, I assumed leadership positions knowing I have the drive and the innitiative to get work done on time and to the best of each of my team member's abilities.</p>
     </div>
   </div>
+
+  <br><br>
+
+  <div id='footer'></div>
+
   
 </body>
 </html>
