--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class='container' style='color:black;'>
       <h1>Reuven Reyman</h1>
       <p>Welcome to my portfolio. Thank you for taking some time to learn about me.</p>
+      <em>Disclaimer: This website is a work in progress! Please mind the roughness as I work to improve and finalize my online portfolio </em> :)
     </div>
   </div>
 
