--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class='columnContainer' style=''>
-    <img src='/files/images/podemos1.jpg'>
+    <img src='files/images/podemos1.jpg'>
     <div>
       <h3>Leading By Example</h3>
       Raised by two current Project Managers, I have been raised in a family of leaders and innovative thinkers who, in the words of my dad, "get sh*t done". Like my parents, I have an inner drive to not only complete the task on hand, but to do so in my best and most profitable manner. In school and the workplace, I have learned a geat deal about time management, team leadership, and working in a fast-paced cooperative environment. 
