--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   </div>
 
 
-
+<div style='margin-top:0px; width:full; background-image: linear-gradient(-45deg, blue, purple);'>
+<br>
   <div class='columnContainer'>
       <img src='https://yt3.googleusercontent.com/ytc/AOPolaS7pVowyT8MlEB1s-pJaiDaJJYuyIrdg4ZpoR1dWwY=s900-c-k-c0x00ffffff-no-rj'>
       <div>
@@ -32,7 +33,8 @@
   </div>
 
     <br><br>
-
+</div>
+  
   <div class='fullContainer' style='background-color:white;'>
           <p style='width:full; text-align:center; color:black;' class='navBar'><a href='experience'>Work Experience</a> | <a href='projects'>Projects</a> | <a href='skills'>Skills</a> | <a href='education'>Education</a></p>
   </div>
