--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
 
 
-<div style='margin-top:0px; width:full; background-image: linear-gradient(-45deg, blue, purple);'>
+<div style='margin-top:0px; width:full; background-image: linear-gradient(180deg, blue, purple); background-attachment: fixed;'>
 <br>
   <div class='columnContainer'>
       <img src='https://yt3.googleusercontent.com/ytc/AOPolaS7pVowyT8MlEB1s-pJaiDaJJYuyIrdg4ZpoR1dWwY=s900-c-k-c0x00ffffff-no-rj'>
