--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
   </style>
   
-<body>
+<body onload='finishLoad()'><div id='loader'></div>
 
   <div class='fullContainer' style='background-color:white; min-height:40%; margin-top:20px;'> 
     <div class='container' style='color:black;'>
@@ -60,4 +60,8 @@
 
   
 </body>
+
+<script type='text/javascript' src='https://reuvenrey.github.io/me/files/headerScript.js'></script>
+<script>runHeader();</script>
+  
 </html>
