--- a/experience.html
+++ b/experience.html
@@ -11,7 +11,7 @@
   <style>
   </style>
   
-<body>
+<body onload='finishLoad()'><div id='loader'></div><div id='header'></div>
 
   <div class='fullContainer' style='background-color:white; min-height:40%; margin-top:20px;'> 
     <div class='container' style='color:black;'>
@@ -50,4 +50,8 @@
   </div>
   
 </body>
+
+<script type='text/javascript' src='https://reuvenrey.github.io/me/files/headerScript.js'></script>
+<script>runHeader();</script>
+	
 </html>
