--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
   </style>
   
-<body onload='finishLoad()'><div id='loader'></div>
+<body onload='finishLoad()'><div id='loader'></div><div id='header'></div>
 
   <div class='fullContainer' style='background-color:white; min-height:40%; margin-top:20px;'> 
     <div class='container' style='color:black;'>
