--- a/experience.html
+++ b/experience.html
@@ -42,6 +42,27 @@
       	</div>
   </div>
 
+	 <div class='columnContainer'>
+	        <img src='https://www.oceanlight.com/stock-photo/jacobs-school-engineering-ucsd-image-20846-915599.jpg'>
+     	 <div>
+	      	<h2 style='margin-top:0'>CAD Tutor, Jacobs School of Engineering</h2>
+          	<p style='margin-top:-10px; margin-bottom:10px;'>UC San Diego | 2022 - 2023</p>
+          	<p>Description</p>
+		<p>As a CAD Tutor I've gained skills in teaching,</p>
+      	</div>
+ 	 </div>
+
+	<div class='columnContainer'>
+	        <img src='https://www.universalstudioshollywood.com/tridiondata/ush/en/us/files/images/universal-revenge-of-the-mummy-fire-2800x1197-a.jpg?imwidth=580'>
+      	<div>
+	      	<h2 style='margin-top:0'>Ride Operator, Revenge of the Mummy</h2>
+		<p style='margin-top:-10px; margin-bottom:10px;'>Universal Studios Hollywood | Summer 2022</p>
+		<p>Description</p>
+		<p>Working at Universal, I learned..</p>
+      	</div>
+  </div>
+
+	
     <br><br>
 
   <div class='fullContainer' style='background-color:white;'>
