--- a/experience.html
+++ b/experience.html
@@ -47,11 +47,11 @@
      	 <div>
 	      	<h2 style='margin-top:0'>CAD Tutor, Jacobs School of Engineering</h2>
           	<p style='margin-top:-10px; margin-bottom:10px;'>UC San Diego | 2022 - 2023</p>
-          	<p>Description</p>
-		<p>As a CAD Tutor I've gained skills in teaching,</p>
+          	<p>Created digital content to aid in the teaching of modeling in AutoDesk Fusion 360, tutored students on the use of the software for designing and fabricating components. Supervised and aided students with the use of fabrication equipment, laser cutters, and 3D printers</p>
+		<p>As a CAD Tutor I've gained skills in teaching and further improved my CAD and Design skills. I also perfected the use of industrial fabrication equipment including 3D printers and Laser Cutters.</p>
       	</div>
  	 </div>
-
+<!--
 	<div class='columnContainer'>
 	        <img src='https://www.universalstudioshollywood.com/tridiondata/ush/en/us/files/images/universal-revenge-of-the-mummy-fire-2800x1197-a.jpg?imwidth=580'>
       	<div>
@@ -61,6 +61,7 @@
 		<p>Working at Universal, I learned..</p>
       	</div>
   </div>
+	-->
 
 	
     <br><br>
