--- a/404.html
+++ b/404.html
@@ -42,10 +42,9 @@
     
     runHeader();
 
-    openLoader(){
+    function openLoader(){
       document.getElementById("loader").style.display = 'block';
       document.getElementById("loader").style.opacity = 1;
-
     }
   
   </script>
