--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
     </div>
   </div>
 
+   <div class='container' style='max-width:1200px;'>
+    <h3>Teamwork Makes the Dream Work</h3>
+     Needless to say, I greatly value the power of collaborative work and I have come to understand that every valuable solution to a problem requires input from a diverse group of thinkers. Every team member brings their own life experience, skills, and abilities to the table and these unique parts of each engineer are what allow teams to bring great success together.
+  </div>
+
+
   <br><br>
 
   <div id='footer'></div>
