--- a/experience.html
+++ b/experience.html
@@ -51,17 +51,17 @@
 		<p>As a CAD Tutor I've gained skills in teaching and further improved my CAD and Design skills. I also perfected the use of industrial fabrication equipment including 3D printers and Laser Cutters.</p>
       	</div>
  	 </div>
-<!--
+
 	<div class='columnContainer'>
 	        <img src='https://www.universalstudioshollywood.com/tridiondata/ush/en/us/files/images/universal-revenge-of-the-mummy-fire-2800x1197-a.jpg?imwidth=580'>
       	<div>
 	      	<h2 style='margin-top:0'>Ride Operator, Revenge of the Mummy</h2>
 		<p style='margin-top:-10px; margin-bottom:10px;'>Universal Studios Hollywood | Summer 2022</p>
-		<p>Description</p>
-		<p>Working at Universal, I learned..</p>
+		<p>I worked with a team of like-minded people to safely and efficiently operate a popular theme-park attraction.</p>
+		<p>At Universal, I learned how to work on a team, interact with new people on a proffesional and personal level, quickly adapt to solve problems and think on my feet, and to handle myself in stressful and overwhelming situations.</p>
       	</div>
   </div>
-	-->
+	
 
 	
     <br><br>
