--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
 		  <div onclick='window.open("mailto:reuvenreyman@gmail.com")'>
 			  <img src='https://www.nidirect.gov.uk/sites/default/files/styles/nigov_full_620_x1/public/images/email_logo.jpg?itok=ifUhNgCT'>
 			  <h3>Email</h3>
+			  <p>reuvenreyman@gmail.com</p>
 		  </div>
 		   <div onclick='window.open("https://www.linkedin.com/in/reuven-reyman-6469b5252/","_self")'>
 			  <img src='https://media.licdn.com/dms/image/D4D35AQEKfVeH7vKkxA/profile-framedphoto-shrink_400_400/0/1700004109591?e=1702328400&v=beta&t=oqLO4tkUWqe9sd565_QHNpa2wI1jKp4fBI-Ap3dVsSs'>
