--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://reuvenrey.github.io/me/files/styleSheet.css">
     <link rel="icon" type="image/x-icon" href="files/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Education | Reuven Reyman</title>
+    <title>Get In Contact | Reuven Reyman</title>
   </head>
   
   <style>
