--- a/skills.html
+++ b/skills.html
@@ -77,6 +77,49 @@
 	  </div>
   </div>
 
+	<br><br>
+
+	<div class='fullContainer' style='text-align:center'>
+		 <h1>Computer Programming</h1>
+	  <div class='portholeContainer'>
+		  <div>
+			  <img src='https://media.licdn.com/dms/image/C4D12AQGKzsp4mN2flw/article-cover_image-shrink_720_1280/0/1572245429234?e=2147483647&v=beta&t=HA9ncVeBFBvL9VD0cSAWMTxRtitLTMHWypiKgwkAXms'>
+			  <h3>JavaScript (JS)</h3>
+		  </div>
+		  <div>
+			  <img src='https://play-lh.googleusercontent.com/U0Re_PSVXwD_dl2owMJjuERpK8UXLwMQysoMDB0kGOL73-TMBOurSbZLLEBQMxA5Lg'>
+			  <h3>C# (Unity3D)</h3>
+		  </div>
+		  <div>
+			  <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTm8Nz-lVLOsFtxnAwAVxjr0TMy0MqXjatBEm4znrrlfh7gftvHbnfEYgR9qGJmTCQikeo&usqp=CAU'>
+			  <h3>Visual Studio IDE / Code Editor</h3>
+		  </div>
+		   <div>
+			  <img src='https://p92.com/binaries/content/gallery/p92website/technologies/htmlcssjs-overview.png'>
+			  <h3>HTML and CSS</h3>
+		  </div>
+	  </div>
+	</div>
+
+	<br><br>
+
+	<div class='fullContainer' style='text-align:center'>
+		 <h1>Fabrication and Machinery</h1>
+	  <div class='portholeContainer'>
+		  <div>
+			  <img src='image_link'>
+			  <h3>Automated Laser Cutter</h3>
+		  </div>
+		  <div>
+			  <img src='image_link'>
+			  <h3>3D Printing</h3>
+		  </div>
+		  <div>
+			  <img src='image_link'>
+			  <h3>Bandsaw and Drill Press</h3>
+		  </div>
+	  </div>
+	</div>
 
 	
     <br><br>
