--- a/experience.html
+++ b/experience.html
@@ -70,6 +70,11 @@
           <p style='width:full; text-align:center; color:black;' class='navBar'><a href='index'>Home</a> | <a href='projects'>Projects</a> | <a href='skills'>Skills</a> | <a href='education'>Education</a>
           </p>
   </div>
+
+	<br>
+
+		<div id='footer'></div>
+
   
 </body>
 
