--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,10 @@
           <p style='width:full; text-align:center; color:black;' class='navBar'><a href='index'>Home</a> | <a href='projects'>Projects</a> | <a href='skills'>Skills</a> | <a href='experience'>Work Experience</a>
           </p>
   </div>
+
+	<br>
+
+	<div id='footer'></div>
   
 </body>
 
