--- a/skills.html
+++ b/skills.html
@@ -128,7 +128,11 @@
           <p style='width:full; text-align:center; color:black;' class='navBar'><a href='index'>Home</a> | <a href='projects'>Projects</a> | <a href='skills'>Skills</a> | <a href='experience'>Work Experience</a>
           </p>
   </div>
-  
+
+<br>
+		<div id='footer'></div>
+
+	
 </body>
 
 <script type='text/javascript' src='https://reuvenrey.github.io/me/files/headerScript.js'></script>
