--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,6 @@
   <div class='fullContainer' style='background-color:white; min-height:40%; margin-top:20px;'> 
     <div class='container' style='color:black;'>
       <h1>Projects</h1>
-      <p></p>
     </div>
   </div>
 
@@ -27,7 +26,10 @@
       <div>
 	      	<h2 style='margin-top:0'>Ride Engineering Competition</h2>
           	<p style='margin-top:-10px; margin-bottom:10px;'>Winter - Spring 2024</p>
-          	
+	     		<p>Role: <em>Mechanical Team Lead, Materials, Controls Design</em></p>
+			<p>Goal: To design, fabricate, and present a fully functional scale rollercoaster featuring multiple safety and controls elements which could thrill Starburst Candies.</p>
+	    		<p>As Mechanical Lead, I was responsible for the main design of the ride, including tracks, supports, ride vehicle, and safety systems. I also helped to design the controls system for the ride and handled inventory and tracking of materials used throughout the project.</p>
+	   		<p><b>Skills - </b> SolidWorks, Mechanical Design, Physics, 3D Printing, Laser Cutting</p> 
       </div>
   </div>
 
@@ -36,14 +38,22 @@
       <div>
 	      	<h2 style='margin-top:0'>Expiramental Flume</h2>
           	<p style='margin-top:-10px; margin-bottom:10px;'>2023 - 2024</p>
+			<p>Role: <em>Flow Inlet Design</em></p>
+	      		<p>Goal: Design an expiramental flume to use for testing of riverbed measuring tools</p>
+	      		<p>For this project, I focused on designing a component of the flume to distribute even and non-turbulent water flow to the expiramental section of the flume.</p>
+	      		<p><b>Skills</b> - SolidWorks, Fluid Mechanics, Industry Research</p>
       </div>
   </div>
 
 <div class='columnContainer'>
 	        <img src='https://pbs.twimg.com/media/EmfBgLqUYAAtEfx.jpg'>
       <div>
-	      	<h2 style='margin-top:0'>Triton Robo-Sub (Robotic Summarine)</h2>
+	      	<h2 style='margin-top:0'>Triton Robo-Sub (Robotic Submarine)</h2>
           	<p style='margin-top:-10px; margin-bottom:10px;'>Winter - Spring 2023</p>
+	      		<p>Role: <em>Mechanical Team</em></p>
+	      		<p>Goal: Improve upon the existing submarine design's mechanical components.</p>
+	      		<p>My role for this specific project was to design and fabricate mounts for the LED headlights on the submarine. I used SolidWorks to design a prototype, 3D printed it, and tested it with our components.</p>
+	      		<p><b>Skills - </b>SolidWorks, Metal Working</p>
       </div>
   </div>
 
