--- a/programs/shaft-design-project.html
+++ b/programs/shaft-design-project.html
@@ -17,80 +17,68 @@
 
 		input, select{padding:10px; cursor:pointer; border: 1px solid black; border-radius:5px; transition:0.5s; min-width:100px; margin:15px;}
 
-		#consoleContainer{color:black;}
-		#consoleContainer h3{color:black;}
+		#projConsole{color:white; padding:15px; position:fixed; bottom:0; left:0; right:0; background:rgba(0,0,0,0.60); height:150px; overflow-y:scroll; border-top:5px solid black;}
+		#projConsole h3{color:white;}
 
 		.spacer{width:100%; height:2px;}
+
+		.fullContainer{background:white; color:black; animation:fade-in 0.5s;}
+		.fullContainer .container h1, .fullContainer .container h2, .fullContainer .container h3{color:black;}
+		.fullContainer .container a{color:blue;}
 	</style>
 
 	<body onload='finishLoad()'><div id='loader'></div><div id='header'></div>
 
-		<div class='container'>
+		<div id='projConsole' class='fadeIn' style='display:none;'></div>
+
+		<div class='container fadeIn'>
 			<h1>Shaft Design Project</h1>
 			<p>This project was completed as part of my <em>MAE 190 - Design of Machine Elements</em> course at UC San Diego. The purpose of this code is to determine a safe diameter for a mechanical shaft given user provided parameters.</p>
 		</div>
 
-		<div class='fullContainer' id='fullCont'>
-			<div class='container' id='mainContainer'>
-				<button onclick='startCode()'>Start Program</button>
-				<a style='color:black; margin:20px; text-decoration:underline' href='https://github.com/reuvenrey/programs/blob/main/shaft-design-project.html'>View Code</a>
+<!-- INITIAL MENU -->
+		<div class='fullContainer' id='initialMenuContainer'>
+			<div class='container'>
+				<button onclick='startCode()'>Run Program</button> | <a href='https://github.com/reuvenrey/programs/blob/main/shaft-design-project.html'>View Code</a>
 			</div>
 		</div>
 
-		<div class='fullContainer' style='background:white; color:black; transition:0.5s;'>
-			<div class='container' id='consoleContainer' style='font-family: "Courier New", monospace; display:none;'>
+<!-- STEP ONE -->
+		<div class='fullContainer' id='stepOneContainer' style='display:none'>
+			<div class='container'>
+				<h3>User Defined Design Parameters</h3>
+				<p>Please input all necessary information in order to calculate diameter of your circular shaft.</p>
 				
 			</div>
+			<div class='container'>
+			</div>
 		</div>
+
+		
+
+<!-- STEP TWO -->
+
+		<br><br>
 		
 	<div id='footer'></div></body>
 
 	<!-- ------------------------------------------------------------------------------------------- DESIGN PROJECT CODE ----------------------------->
 
 	<script>
+		// Console Container
+		const ui = document.getElementById("projConsole"); // console: 	ui.innerHTML += "";
 
-		const container = document.getElementById("mainContainer");
-		const ui = document.getElementById("consoleContainer"); // console: 	ui.innerHTML += "";
+		// User Variable Input Elements
+		const stepOneContainer = document.getElementById("stepOneContainer");
+		const initialMenuContainer = document.getElementById("initialMenuContainer");
+		
 
 
+		// STEP ONE - USER INPUTS NECESSARY INFORMATION 
 		function startCode(){
-
-			console.log("Design Project Code Started");
-			ui.style.display = 'block';
-			ui.innerHTML = "<h2>Project Console</h2><p>Welcome to Reuven's MAE 190 Shaft Design Project. Please enter your user-specified values.</p>";
-
-			container.innerHTML = "<h2>Design Parameters</h2>Please enter your design parameters."
-
-			container.innerHTML += "<p> \
-				<div style='display:inline-block'><label>Units of Measurment</label> \
-				<select> \
-					<option>Standad (MPa, N, kg)</option> \
-					<option>Imperial (Psi, Lbf, lb)</option> \
-				</select></div></p>";
-
-			container.innerHTML += "<div class='spacer' style='background:dimgray'></div>";
+			stepOneContainer.style.display = "block";
+			initialMenuContainer.style.display = "none";
 			
-			container.innerHTML += "<p> \
-				<div style='display:inline-block'><label>Mean Torque</label><input id='mean-torque' type='number' placeholder='Tm'></div> \
-				<div style='display:inline-block'><label>Alternating Torque</label><input id='alt-torque' type='number' placeholder='Ta'></div> \
-				<div style='display:inline-block'><label>Mean Moment</label><input id='mean-moment' type='number' placeholder='Mm'></div> \
-				<div style='display:inline-block'><label>Alternating Moment</label><input id='alt-moment' type='number' placeholder='Ma'></div> \
-				</p>";
-
-			container.innerHTML += "<div class='spacer' style='background:dimgray'></div>";
-
-			// MATERIALS - CHOOSE AROUND 4 FROM TABLE A-20 (steels and ductile materials)
-			container.innerHTML += " <p> \
-				<div style='display:inline-block'><label>Material Selection</label> \
-				<select> \
-					<option>Steel</option> \
-				</select></div> \
-				<div style='display:inline-block'><label>Desired Factor of Safety Minimum</label><input id='minFOS' type='number' max='5' placeholder='n'></div> \
-				</p>";
-
-			container.innerHTML += "<div class='spacer' style='background:dimgray'></div>";
-
-			container.innerHTML += "<p><button onclick='stepTwo()'>Continue</button></p>"
 			
 		} //end of function startCode
 
