--- a/programs/shaft-design-project.html
+++ b/programs/shaft-design-project.html
@@ -96,8 +96,8 @@
 					<div>Units of Measurment</div>
 					<div>
 						<select id='unitsOfMeasure'>
-							<option value='english'>English (lb, psi, in)</option>
-							<option value='standard'>Standard International (N, Pa, m)</option>
+							<option value='english'>English (lb, psi, in, °F)</option>
+							<option value='standard'>Standard International (N, Pa, m, °C)</option>
 						</select>
 					</div>
 					<div>Method</div>
@@ -183,6 +183,12 @@
 					<div>
 						<input id='momentM' type='number' placeholder='Mm'>
 					</div>
+					<div>Environmental Temperature<p><em>Use RT for Room Temperature</em></p></div>
+					<div>
+						<input id='temp' type='number' placeholder='°F / °C'>
+					</div>
+					<div></div>
+					<div></div>
 				</div> <!-- end of GEOMETRY parameters-->
 			</div>
 			<div class='container' style='border-top:2px solid black'>
