--- a/programs/shaft-design-project.html
+++ b/programs/shaft-design-project.html
@@ -183,9 +183,9 @@
 					<div>
 						<input id='momentM' type='number' placeholder='Mm'>
 					</div>
-					<div>Environmental Temperature<p><em>Use RT for Room Temperature</em></p></div>
+					<div>Environmental Temperature<br><em>Use RT for Room Temperature</em></div>
 					<div>
-						<input id='temp' type='number' placeholder='°F / °C'>
+						<input id='temp' placeholder='°F / °C'>
 					</div>
 					<div></div>
 					<div></div>
